grant-search-result: Make sure divider does not move on smaller screens
https://github.com/ThreeSixtyGiving/grantnav/issues/717

--- a/src/components/04-modules/grant-search-result/grant-search-result.scss
+++ b/src/components/04-modules/grant-search-result/grant-search-result.scss
@@ -53,6 +53,10 @@
   &__right-side {
     padding-top: 12px;
     padding-bottom: 6px;
+    width: 100%;
+    @include breakpoint($medium) {
+      width: 30%;
+    }
   }
 
   &__title {
